<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title_spotify">Spotify Streamer</string>
    <string name="app_title_scores">Scores App</string>
    <string name="app_title_library">Library App</string>
    <string name="app_title_build_bigger">Build It Bigger</string>
    <string name="app_title_xyz">XYZ Reader</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="app_title_capstone">Capstone:My Own App</string>
</resources>
