<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id="@+id/main_title"
        android:text="@string/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_red_500"
        android:padding="@dimen/main_title_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_title"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true">

        <Button android:id="@+id/main_button_spotify"
            style="@style/MainButtonStyle"
            android:text="@string/app_title_spotify" />

        <Button android:id="@+id/main_button_scores"
            style="@style/MainButtonStyle"
            android:text="@string/app_title_scores" />

        <Button android:id="@+id/main_button_library"
            style="@style/MainButtonStyle"
            android:text="@string/app_title_library" />

        <Button android:id="@+id/main_button_build_bigger"
            style="@style/MainButtonStyle"
            android:text="@string/app_title_build_bigger" />

        <Button android:id="@+id/main_button_xyz"
            style="@style/MainButtonStyle"
            android:text="@string/app_title_xyz" />

        <Button android:id="@+id/main_button_capstone"
            style="@style/MainButtonStyle"
            android:text="@string/app_title_capstone"
            android:background="@color/button_background_featured"/>

    </LinearLayout>

</RelativeLayout>
